@@ -3,6 +3,7 @@ Changes for Labyrinth-Plugin-CPAN
 
         - fixed license fields in META.json to be lists.
         - FindTester now properly called as a method.
+        - better argument validation in GetTesterProfile.
 
 3.50	2014-07-06
         - abstracted out from CPAN-Testers-WWW-Reports, and
